<resources>
    <string name="app_name">Zomato</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Working Under construction</string>
    <string name="order">ORDER</string>
    <string name="go_out">GO OUT</string>
    <string name="gold">GOLD</string>
    <string name="search">SEARCH</string>
    <string name="title_activity_restaurant_details">RestaurantDetails</string>
    <string name="action_share">Share</string>
    <string name="crop_image"><![CDATA[\?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A]]></string>
    <string name="sub_text_gold">Choose what\'s right for you</string>
    <string name="title_gold">Because you want it!</string>
    <string name="bookmark">bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="address_not_found">Sorry, we couldn\'t find results</string>
    <string name="map">Map</string>
    <string name="address">Address</string>
    <string name="use_current_location">Use current location</string>
    <string name="zomato_tag_line">think food think zomato</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_later">I\'ll log in later</string>
    <string name="profile">PROFILE</string>
    <string name="no_bookmark_text">You haven\'t bookmarked any restaurants yet.</string>
    <string name="profile_name">Profile name</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="no_results_found">No results found</string>
    <string name="search_location">Search for your location...</string>
    <string name="eg_place">e.g Connaught Place, New Delhi</string>
    <string name="back_button">BACK BUTTON</string>
    <string name="locate">LOCATION</string>
    <string name="xo_belgain_waffle">Xo Belgain Waffle</string>
    <string name="image_search">search restaurant image</string>
    <string name="rating_text">4.1</string>
    <string name="restaurant_address">Jp Nagar, Bangalore</string>
    <string name="directions">Directions</string>
    <string name="highlighted_reviews">Highlighted Reviews</string>
    <string name="open_in_google_maps">Open in google maps</string>
    <string name="fifty_to_sixty">50-60 Mins</string>
    <string name="fourty_to_fifty">40-50 Mins</string>
    <string name="twentyfive_to_thirtyfive">25-35 Mins</string>
    <string name="fifteen_to_twentyfive">15-25 Mins</string>
    <string name="address_title">addressTitle</string>
    <string name="address_latitude">addressLatitude</string>
    <string name="address_longitude">addressLongitude</string>
    <string name="address_heading">addressHeading</string>
    <string name="delivery_address">deliveryAddress</string>
    <string name="starter_pack">Starter Pack</string>
    <string name="use_gold_3_times_at_partner">Use Gold 3 times at partner</string>
    <string name="restaurant_no_expiry">restaurant. No expiry.</string>
    <string name="_3_unlocks">3 unlocks</string>
    <string name="_350">₹350</string>
</resources>
