<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/order_selector"
        android:title="@string/order" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/go_out_selector"
        android:title="@string/go_out" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/gold_selector"
        android:title="@string/gold" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="PROFILE" />

</menu>
