<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.AddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/locationSurface"
            android:paddingStart="@dimen/five"
            android:paddingEnd="@dimen/five"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:paddingLeft="@dimen/ten"
        android:paddingRight="@dimen/ten">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/location_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/circular_bold"
                    android:hint="@string/search_location"
                    android:maxLines="1"
                    android:paddingTop="@dimen/five"
                    android:paddingBottom="@dimen/five"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/five"
                android:layout_marginBottom="@dimen/five"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_book"
                android:text="@string/eg_place"
                android:textSize="@dimen/small_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:background="#EFEFEF" />

            <LinearLayout
                android:id="@+id/use_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/forteen"
                    android:layout_height="@dimen/forteen"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/ten"
                    android:layout_marginRight="@dimen/ten"
                    android:src="@drawable/ic_current"
                    android:contentDescription="@string/locate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:text="@string/use_current_location"
                    android:textColor="@color/current_location"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <TextView
                android:id="@+id/address_not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:fontFamily="@font/circular_bold"
                android:text="@string/address_not_found"
                android:textColor="@color/theme"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/location_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>