<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/ten"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:context=".DirectionBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fifteen">

            <ImageView
                android:id="@+id/close_bottomsheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circular_bold"
                android:text="@string/map"
                android:textColor="@color/black"
                android:textSize="@dimen/large" />

        </RelativeLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/circular_book"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="@dimen/medium" />

            <TextView
                android:id="@+id/location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_book"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_large" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:layout_marginBottom="@dimen/ten"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/get_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fifteen"
            android:layout_marginLeft="@dimen/fifteen"
            android:layout_marginRight="@dimen/fifteen"
            android:layout_marginBottom="@dimen/fifteen">

            <ImageView
                android:layout_width="@dimen/twenty"
                android:layout_height="@dimen/twenty"
                android:src="@drawable/direction_right" />

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_weight="1"
                android:fontFamily="@font/circular_bold"
                android:text="@string/open_in_google_maps"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_large" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fifteen"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>