<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/fifteen"
        android:paddingTop="@dimen/gold_margin_bottom"
        android:paddingEnd="@dimen/fifteen"
        android:paddingBottom="@dimen/gold_bottom_padding"
        tools:context=".view.fragment.GoldFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gold_logo_padding">

            <ImageView
                android:layout_width="@dimen/gold_logo_size"
                android:layout_height="@dimen/gold_logo_size"
                android:layout_centerInParent="true"
                android:src="@drawable/gold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/sparkle_gold" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/circular_bold"
            android:text="@string/title_gold"
            android:textColor="@color/black"
            android:textSize="@dimen/gold_subtext" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/circular_bold"
            android:text="@string/sub_text_gold"
            android:textColor="@color/black"
            android:textSize="@dimen/large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/gold_cardview"
            android:padding="@dimen/fifteen">

            <ImageView
                android:layout_width="@dimen/twenty_two"
                android:layout_height="@dimen/twenty_two"
                android:layout_marginTop="@dimen/three"
                android:src="@drawable/not_checked" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/ten">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:text="@string/starter_pack"
                    android:textColor="@color/starter_pack"
                    android:textSize="@dimen/large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/three"
                    android:layout_marginBottom="@dimen/three"
                    android:fontFamily="@font/circular_book"
                    android:text="@string/use_gold_3_times_at_partner"
                    android:textColor="@color/gold_card_subtext"
                    android:textSize="@dimen/thirteen_textsize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:text="@string/restaurant_no_expiry"
                    android:textColor="@color/gold_card_subtext"
                    android:textSize="@dimen/thirteen_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_book"
                    android:text="@string/_3_unlocks"
                    android:textColor="@color/gold_unlocks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_bold"
                    android:gravity="bottom"
                    android:text="@string/_350"
                    android:textColor="@color/black"
                    android:textSize="@dimen/gold_subtext" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@drawable/gold_cardview"
            android:padding="@dimen/fifteen">

            <ImageView
                android:layout_width="@dimen/twenty_two"
                android:layout_height="@dimen/twenty_two"
                android:layout_marginTop="@dimen/three"
                android:src="@drawable/not_checked" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/ten">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:text="Pro Pack"
                    android:textColor="#1C1C1C"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/circular_book"
                    android:text="Use Gold 10 times at partner"
                    android:textColor="#1C1C1C"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:text="restaurant. No expiry."
                    android:textColor="#1C1C1C"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_book"
                    android:text="10 unlocks"
                    android:textColor="#5D5D67" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_bold"
                    android:gravity="bottom"
                    android:text="₹850"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/gold_cardview"
            android:padding="15dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/not_checked" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:text="Unlimited Pack"
                    android:textColor="#1C1C1C"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/circular_book"
                    android:text="No limit on unlocks at partner"
                    android:textColor="#1C1C1C"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:text="restaurant. Valid for 1 year"
                    android:textColor="#1C1C1C"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_book"
                    android:text="FOR 1 YEAR"
                    android:textColor="#5D5D67" />

                <TextView
                    android:id="@+id/scratch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_medium"
                    android:text="₹1,800"
                    android:textColor="#979BAA"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/circular_bold"
                    android:gravity="bottom"
                    android:text="₹1,000"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>