<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="@dimen/fifteen">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:src="@drawable/zomato_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fifteen"
                android:text="@string/zomato_tag_line"
                android:textColor="@color/white"
                android:textSize="@dimen/large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:background="@drawable/background_black"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen"
                android:background="@drawable/login_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/ten">

                <ImageView
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_marginStart="@dimen/ten"
                    android:src="@drawable/ic_google_filled" />

                <View
                    android:layout_width="@dimen/two"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/fifteen"
                    android:background="@color/dark_red"
                    android:src="@color/dark_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fifteen"
                    android:fontFamily="@font/circular_bold"
                    android:gravity="center_vertical"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/skip_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:text="@string/login_later"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_large" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/three"
                    android:background="@drawable/white_dotted_line" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>